# runawfe-free-alt-mobile

./: README.md  compile_example.txt  config.ini  main.cpp
C_version/: main.c  meson.build  ru.runawfe.Runner.flatpak
C_version/RunaWFE_Free_ALT_Mobile/: meson.build  ru.runawfe.Runner.json
C_version/RunaWFE_Free_ALT_Mobile/data/: meson.build  ru.runawfe.Runner.desktop.in
C_version/RunaWFE_Free_ALT_Mobile/data/icons/: meson.build
C_version/RunaWFE_Free_ALT_Mobile/po/: POTFILES.in
C_version/RunaWFE_Free_ALT_Mobile/src/: main.c  meson.build
C_version/rpm_C/: runawfe-free-0.0.0.1-alt0.1.noarch.rpm  runawfe-free.spec
Cpp_version/: main.cpp  main_gtk3.cpp  meson.build  ru.runawfe.free.desktop.in
Cpp_version/rpm_Cpp/: runawfe-free-0.0.0.1-alt0.1.noarch.rpm  runawfe-free.spec
